--- a/summarize-explore-xlwings.ipynb
+++ b/summarize-explore-xlwings.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "27fb5763",
+   "id": "cdd48d46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,17 +16,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a4f84dd9",
+   "execution_count": 3,
+   "id": "5248ce5b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(data=np.random.randn(100, 5),\n",
-    "                          columns=[f\"Trial {i}\" for i in range(1, 6)])\n",
-    "        df\n",
+    "df = sns.load_dataset('mpg')\n",
+    "df\n",
     "        \n",
     "xw.view(df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65f82da7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
