--- a/openpyxl-excel-reporting-demo.ipynb
+++ b/openpyxl-excel-reporting-demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "e3f8c06d",
    "metadata": {},
    "outputs": [],
@@ -23,18 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "0f2ac185",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read in the data \n",
-    "contestants = pd.read_csv('https://raw.githubusercontent.com/summerofgeorge/blog-files/master/openpyxl-contestants-demo-dataset.csv')"
+    "contestants = pd.read_excel('data/contestants.xlsx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "c865f03e",
    "metadata": {},
    "outputs": [
@@ -59,12 +59,12 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>email</th>\n",
-       "      <th>pre</th>\n",
-       "      <th>post</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>education</th>\n",
-       "      <th>study_hours</th>\n",
+       "      <th>EMAIL</th>\n",
+       "      <th>PRE</th>\n",
+       "      <th>POST</th>\n",
+       "      <th>SEX</th>\n",
+       "      <th>EDUCATION</th>\n",
+       "      <th>STUDY_HOURS</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -75,7 +75,7 @@
        "      <td>494</td>\n",
        "      <td>Male</td>\n",
        "      <td>Bachelor's</td>\n",
-       "      <td>20</td>\n",
+       "      <td>19.965400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -84,7 +84,7 @@
        "      <td>458</td>\n",
        "      <td>Female</td>\n",
        "      <td>Bachelor's</td>\n",
-       "      <td>15</td>\n",
+       "      <td>14.798182</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -93,7 +93,7 @@
        "      <td>483</td>\n",
        "      <td>Female</td>\n",
        "      <td>Bachelor's</td>\n",
-       "      <td>22</td>\n",
+       "      <td>22.230089</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -102,7 +102,7 @@
        "      <td>488</td>\n",
        "      <td>Female</td>\n",
        "      <td>Bachelor's</td>\n",
-       "      <td>21</td>\n",
+       "      <td>21.340726</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -111,22 +111,22 @@
        "      <td>494</td>\n",
        "      <td>Female</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>26</td>\n",
+       "      <td>26.235825</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                            email  pre  post     sex   education  study_hours\n",
-       "0  smehaffey0@creativecommons.org  485   494    Male  Bachelor's           20\n",
-       "1            dbateman1@hao12@.com  462   458  Female  Bachelor's           15\n",
-       "2               bbenham2@xrea.com  477   483  Female  Bachelor's           22\n",
-       "3                    mwison@@g.co  480   488  Female  Bachelor's           21\n",
-       "4        jagostini4@wordpress.org  495   494  Female         NaN           26"
+       "                            EMAIL  PRE  POST     SEX   EDUCATION  STUDY_HOURS\n",
+       "0  smehaffey0@creativecommons.org  485   494    Male  Bachelor's    19.965400\n",
+       "1            dbateman1@hao12@.com  462   458  Female  Bachelor's    14.798182\n",
+       "2               bbenham2@xrea.com  477   483  Female  Bachelor's    22.230089\n",
+       "3                    mwison@@g.co  480   488  Female  Bachelor's    21.340726\n",
+       "4        jagostini4@wordpress.org  495   494  Female         NaN    26.235825"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "f2ad9eb5",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
        "      <td>494</td>\n",
        "      <td>Male</td>\n",
        "      <td>Bachelor's</td>\n",
-       "      <td>20</td>\n",
+       "      <td>19.965400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -187,7 +187,7 @@
        "      <td>458</td>\n",
        "      <td>Female</td>\n",
        "      <td>Bachelor's</td>\n",
-       "      <td>15</td>\n",
+       "      <td>14.798182</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -196,7 +196,7 @@
        "      <td>483</td>\n",
        "      <td>Female</td>\n",
        "      <td>Bachelor's</td>\n",
-       "      <td>22</td>\n",
+       "      <td>22.230089</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -205,7 +205,7 @@
        "      <td>488</td>\n",
        "      <td>Female</td>\n",
        "      <td>Bachelor's</td>\n",
-       "      <td>21</td>\n",
+       "      <td>21.340726</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -214,7 +214,7 @@
        "      <td>494</td>\n",
        "      <td>Female</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>26</td>\n",
+       "      <td>26.235825</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -222,14 +222,14 @@
       ],
       "text/plain": [
        "                            email  pre  post     sex   education  study_hours\n",
-       "0  smehaffey0@creativecommons.org  485   494    Male  Bachelor's           20\n",
-       "1            dbateman1@hao12@.com  462   458  Female  Bachelor's           15\n",
-       "2               bbenham2@xrea.com  477   483  Female  Bachelor's           22\n",
-       "3                    mwison@@g.co  480   488  Female  Bachelor's           21\n",
-       "4        jagostini4@wordpress.org  495   494  Female         NaN           26"
+       "0  smehaffey0@creativecommons.org  485   494    Male  Bachelor's    19.965400\n",
+       "1            dbateman1@hao12@.com  462   458  Female  Bachelor's    14.798182\n",
+       "2               bbenham2@xrea.com  477   483  Female  Bachelor's    22.230089\n",
+       "3                    mwison@@g.co  480   488  Female  Bachelor's    21.340726\n",
+       "4        jagostini4@wordpress.org  495   494  Female         NaN    26.235825"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +885,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
