--- a/openpyxl-excel-reporting-demo.ipynb
+++ b/openpyxl-excel-reporting-demo.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "19e2cddd",
+   "metadata": {},
+   "source": [
+    "For this example we'll work largely with `pandas` for data manipulation, `seaborn` for data visualization and `openpyxl` for a robust set of tools to work with Python and Excel together. Let's load them in to start:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "e3f8c06d",
@@ -22,6 +30,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "716fc4a5",
+   "metadata": {},
+   "source": [
+    "## Preparing the data with `pandas`\n",
+    "\n",
+    "The `pandas` package offers a whole bunch of nifty features for cleaninga and manipulating your data in Python. Think of it as kind of like Power Query for Excel - specialized in data cleaning. But `pandas` has a handful of use cases that Power Query just doesn't have. It also has some capabilities to build plots, perform basic statistical analysis and so forth. So it's a big package but I just want to show you a couple of quick wins with it for now. \n",
+    "\n",
+    "I'm going to read a simulated contestants dataset in from the internet. This dataset has some information about individuals in some sort of contest with the pre and post scores as well as some basic demographic and identifier info. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "0f2ac185",
@@ -29,7 +49,7 @@
    "outputs": [],
    "source": [
     "# Read in the data \n",
-    "contestants = pd.read_excel('data/contestants.xlsx')"
+    "contestants = pd.read_excel('https://github.com/summerofgeorge/blog-files/blob/master/openpyxl-contestants-demo-dataset.csv')"
    ]
   },
   {
@@ -136,108 +156,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "f2ad9eb5",
+   "cell_type": "markdown",
+   "id": "9ace01fd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>email</th>\n",
-       "      <th>pre</th>\n",
-       "      <th>post</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>education</th>\n",
-       "      <th>study_hours</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>smehaffey0@creativecommons.org</td>\n",
-       "      <td>485</td>\n",
-       "      <td>494</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Bachelor's</td>\n",
-       "      <td>19.965400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>dbateman1@hao12@.com</td>\n",
-       "      <td>462</td>\n",
-       "      <td>458</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Bachelor's</td>\n",
-       "      <td>14.798182</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>bbenham2@xrea.com</td>\n",
-       "      <td>477</td>\n",
-       "      <td>483</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Bachelor's</td>\n",
-       "      <td>22.230089</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>mwison@@g.co</td>\n",
-       "      <td>480</td>\n",
-       "      <td>488</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Bachelor's</td>\n",
-       "      <td>21.340726</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>jagostini4@wordpress.org</td>\n",
-       "      <td>495</td>\n",
-       "      <td>494</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>26.235825</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                            email  pre  post     sex   education  study_hours\n",
-       "0  smehaffey0@creativecommons.org  485   494    Male  Bachelor's    19.965400\n",
-       "1            dbateman1@hao12@.com  462   458  Female  Bachelor's    14.798182\n",
-       "2               bbenham2@xrea.com  477   483  Female  Bachelor's    22.230089\n",
-       "3                    mwison@@g.co  480   488  Female  Bachelor's    21.340726\n",
-       "4        jagostini4@wordpress.org  495   494  Female         NaN    26.235825"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# Convert headers to all lowercase\n",
-    "contestants.columns = contestants.columns.str.lower()\n",
-    "contestants.head()"
+    "As part of the data cleaning process, we'd like to remove all rows that contain an invalid email address for each contestant. To do so, we'll use a regular expression. Regular expressions are a very tricky and delicate subject, they are hard to learn and we are very lucky to have things like generative AI to help us now! So for now I'll just provide this matching string and you are welcome to look at further resources on how it work. Please note this is a tool that Excel does NOT support so it's pretty cool we can easily do it with Python! "
    ]
   },
   {
@@ -249,6 +172,14 @@
    "source": [
     "# Define a regular expression pattern for valid email addresses\n",
     "email_pattern = r'^[a-z0-9]+[\\._]?[a-z0-9]+[@]\\w+[.]\\w{2,3}$'  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eae7df8e",
+   "metadata": {},
+   "source": [
+    "Next I am going to filter this dataset so that we keep only emails with a valid address and do some basic data profling to double check my intervention and that the data looks as we'd expect. "
    ]
   },
   {
@@ -336,6 +267,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aa60e44d",
+   "metadata": {},
+   "source": [
+    "There are also some missing values in this dataset. Missing values can be tricky to work with programmatically in Excel, Power Query helps with this but I still find it difficult to do things like we are doing below like finding what percent of values are missing in each column, and then dropping them. It's a very efficient way to do this and you're seeing that a lot of this stuff in `pandas` can help us clean our data with one line of code, it really was written for people like me and maybe you that are not professional programmers and I often find Python code easier to get help with and read and use than something like M code for Power Query. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "27ae4059",
@@ -400,48 +339,6 @@
    ],
    "source": [
     "complete_cases.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "149e9767",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\GeorgeMount\\AppData\\Local\\Temp\\ipykernel_14112\\2866818265.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  complete_cases['post_pct'] = complete_cases['post'].rank(pct=True)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "count    81.000000\n",
-       "mean      0.506173\n",
-       "std       0.290352\n",
-       "min       0.012346\n",
-       "25%       0.265432\n",
-       "50%       0.506173\n",
-       "75%       0.759259\n",
-       "max       1.000000\n",
-       "Name: post_pct, dtype: float64"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "complete_cases['post_pct'] = complete_cases['post'].rank(pct=True)\n",
-    "complete_cases['post_pct'].describe()"
    ]
   },
   {
@@ -560,6 +457,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "047aba95",
+   "metadata": {},
+   "source": [
+    "These are just some of the many use cases where `pandas` has a bit of a leg up over Excel when it comes to data cleaning. What `pandas` cannot do, however, is do much to help you with the actual formatting of Excel workbooks! Again like Power Query it can send out basic data dumps of transformed data to Excel but if you want to add things like conditional formatting, data validation, data visualzation and so forth you are going to need to step outside to do that.\n",
+    "\n",
+    "We are going to use the `openpyxl` package to do that.\n",
+    "\n",
+    "## Writing to Excel with `openpyxl` \n",
+    "\n",
+    "The `openpyxl` package works in some ways like VBA in that we are going to define various elements of the Excel object model to variables. We can then manipulate those variables to do all sorts of things. For everyday data and workbook putting togethers you will be able to do all of this in Python. The benefit again is that everything is code driven and since Python is such a ubiquitous language it's going to be easy to connect it to still other tasks like scheduling emails, connecting to databases, or whatever else you can need. \n",
+    "\n",
+    "What we'll do to get started is define a workbook and worksheet object from scratch. We can continue drill down on these objects to access individual cells in this worksheet and add some data to them, which we'll do by adding the average pre and post scores. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "0fd3ad78",
@@ -589,6 +502,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b0b9f592",
+   "metadata": {},
+   "source": [
+    "Formatting an Excel workbook is top of mind for so many analysts and `openpyxl` largely does a good job with that. However, it does take a little of trial and error to widen columns because there is not exactly an AutoFit feature. Below I am going to take the first column of the worksheet we are creating and widen it to a width I assume is going to work. Later we'll look at a more advanced way to add a sort of AutoFit. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "id": "94deab69",
@@ -596,6 +517,18 @@
    "outputs": [],
    "source": [
     "ws.column_dimensions['A'].width = 16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b877b442",
+   "metadata": {},
+   "source": [
+    "## Adding charts\n",
+    "\n",
+    "With `openpyxl` you have two options to add charts to your Excel workbook. You can either use Excel's native charting and actually drive that whole thing from Python, or you can build native Python plots and add the resulting images into Excel. They both have their pros and cons. For an in depth review, check out this post: https://stringfestanalytics.com/how-to-visualize-data-in-excel-with-openpyxl/\n",
+    "\n",
+    "Below we'll build a bar chart comparing pre and post scores using Excel's own functionality and then a pairplot, a cool plot easily done in Python that would otherwise be difficult to do in Excel, to compare the distributions and relationships across different variables pairwise. "
    ]
   },
   {
@@ -651,7 +584,7 @@
    "outputs": [],
    "source": [
     "# Add the chart to a specific location on the worksheet\n",
-    "ws.add_chart(chart, \"D1\")"
+    "ws.add_chart(chart, 'D1')"
    ]
   },
   {
@@ -739,6 +672,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b7bd3fa0",
+   "metadata": {},
+   "source": [
+    "Again, the Excel-based plot will have the same functionality of any other Excel plot like being able to click into the series, change the values and so forth. The Python plot, while cool looking and doing things that are hard to do in Excel, is just going to be a static image that doesn't update.\n",
+    "\n",
+    "## Creating a formatted summary data source\n",
+    "\n",
+    "Next we are going to take the full `contestants` dataset and write it into Excel. To make the dataset more readable we'll do a few things such as format different columns, add conditional formatting, and more. \n",
+    "\n",
+    "First things first, because we want this to go on a new worksheet we need to create a new worksheet object! "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "id": "ae885956",
@@ -746,6 +693,14 @@
    "outputs": [],
    "source": [
     "ws2 = wb.create_sheet(title='data')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef541055",
+   "metadata": {},
+   "source": [
+    "Next, we'll use a `for` loop to go row by row through `complete_cases` and write it out to the worksheet. If you're not famiilar with a `for` loop or what is meant by an \"index,\" \"DataFrame\" or so forth I'd suggest checking out my book _Advancing into Analytics_. "
    ]
   },
   {
@@ -757,6 +712,16 @@
    "source": [
     "for row in dataframe_to_rows(complete_cases, index=False, header=True):\n",
     "    ws2.append(row)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "508df4e8",
+   "metadata": {},
+   "source": [
+    "My next step is to format the percentile column in the dataset. Because my fear is that for some reason this column might move to a different column location, or another column gets added or deleted that makes that happen, what I want to do here is find the column location by name of `post_pct`. \n",
+    "\n",
+    "That means indexing my `complete_cases` DataFrame to find what number column this is. Because Python is a zero-based indexing language and Excel is one, I am going to add 1 to my code here to determine that `post_pct` is Column G of the Excel workbook. "
    ]
   },
   {
@@ -780,6 +745,14 @@
     "post_pct_loc = complete_cases.columns.get_loc('post_pct') + 1\n",
     "post_pct_col = get_column_letter(post_pct_loc) \n",
     "post_pct_col"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e962c04",
+   "metadata": {},
+   "source": [
+    "With that determined, I now know to format this specific column as a percentage. Again we'll use a loop to go down each row and apply this formatting. "
    ]
   },
   {
